# byssal

./: README.md  pyproject.toml
src/byssal/: __init__.py  cli.py  repository.py
src/byssal/crawlers/: base.py  posix.py
src/byssal/templates/: settings.py
src/byssal/templates/new_project/: README.md  settings.py
src/byssal/threads/: base.py  posix.py
tests/: conftest.py  test_crawlers.py  test_scratch.py  test_threads.py
tests/fixtures/posix/sample_files/: vegetables.txt
tests/fixtures/posix/sample_files/nesting/things/: payload.json
