[project]
name = "byssal"
version = "0.1.0"
description = "Byssal - A Repository of Threads"
readme = "README.md"
authors = [
    { name = "Graham Hukill", email = "ghukill@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
byssal = "byssal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.setuptools.package-data]
byssal = ["templates/settings.py"]